--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="styles.scss" />
-    <script
+     <link rel="stylesheet" href="styles.css" />
+    <!-- <script
       defer
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
-    ></script>
+    ></script> -->
+    <script src="https://unpkg.com/scrollreveal"></script>
 
   </head>
 
@@ -314,6 +316,7 @@
     </footer>
     <!-- /END Footer Section -->
 
-    <script defer type="module" src="index.js"></script>
+    <!-- <script defer type="module" src="./index.js"></script> -->
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
